Se cambiaron los roles a una lista, se eliminaron endpoints inutiles, se mejoro la recepcion de errores 404, se delegaron responsabilidades de cambio de estado a las clases